# prayerhub-mini

./: .gitignore  AGENTS.md  README.md  README_INSTALL.md  config.example.yml  deployment.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
deploy/: build_bundle.sh  install.sh  prayerhub.service  setup_device.sh
docs/: converted-repo-prayer-api.txt  prototype.md  spec.md
src/prayerhub/: __init__.py  __main__.py  app.py  audio.py  background_keepalive.py  bluetooth.py  cache_store.py  command_runner.py  config.py  control_panel.py  keepalive.py  logging_utils.py  playback.py  playback_timeout.py  prayer_api.py  prayer_times.py  scheduler.py  startup.py  test_scheduler.py
tests/: conftest.py  test_app.py  test_audio.py  test_background_keepalive.py  test_bluetooth.py  test_cache_store.py  test_config_loader.py  test_control_panel.py  test_install_script.py  test_keepalive.py  test_logger_factory.py  test_playback.py  test_playback_timeout.py  test_prayer_api.py  test_prayer_times.py  test_scheduler.py  test_smoke.py  test_smoke_scheduler.py  test_startup_flow.py  test_test_scheduler.py
